# SuperBenchmark

./: .editorconfig  .gitignore  README.md  mypy.ini  pyproject.toml  test_main.http
app/: database.py  main.py  models.py  results.py  test_results.py
