[tool.poetry]
name = "superbenchmark"
version = "0.1.0"
description = ""
authors = ["ThatMadMf <onoshkomax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
httpx = "^0.27.2"
pytest = "^8.3.3"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
